# db-connect

./: .env.example  .gitignore  .gitleaks.toml  .prettierignore  AGENTS.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
docs/: clickhouse-support.md
scripts/: release-core.mjs  release-drafter-config.node-test.mjs  release-flow.node-test.mjs  release-notes-utils.mjs  release-notes-utils.node-test.mjs  release-notes.mjs  release-utils.mjs  release-utils.node-test.mjs  release.mjs  release.node-test.mjs
src/: App.css  App.tsx  appVersion.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  data.rs  database_compare.rs  database_sync.rs  file_io.rs  foreign_key.rs  github_issue.rs  index_cmd.rs  mod.rs  preferences.rs  routine_event.rs  runtime.rs  sql_file.rs  temporary_database.rs  trigger.rs
src-tauri/src/commands/database/: column_ops.rs  mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: adapter.rs  clickhouse.rs  connection.rs  dialect.rs  mod.rs  postgres.rs  postgres_ddl.rs  postgres_objects.rs  sql_script.rs  sql_utils.rs  sqlite.rs  sqlserver.rs  sqlserver_ddl.rs  sqlserver_objects.rs
src-tauri/src/db/schema_compare/: clickhouse.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlserver.rs
src-tauri/src/db/schema_sync/: clickhouse.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlserver.rs
src-tauri/src/db/ssh_tunnel/: mod.rs  openssh_tunnel.rs  russh_tunnel.rs
src-tauri/src/models/: types.rs
src-tauri/src/util/: mod.rs  secure_fs.rs
src/__tests__/: ConnectionFormDatabaseType.test.tsx  ConnectionListGroups.test.tsx  DatabaseCompareModal.test.tsx  DatabaseCompareResults.test.tsx  DatabaseOverview.test.tsx  DatabaseSqlFileActions.test.tsx  DatabaseSyncPreviewModal.test.tsx  DatabaseTreeCapabilities.test.tsx  ErrorBoundary.test.tsx  FavoriteTables.test.tsx  ForeignKeyListDiagram.test.tsx  MermaidBlock.test.tsx  ObjectWriteGuards.test.tsx  PostgresDatabaseCreateModal.test.tsx  PostgresTableStructure.test.tsx  ProjectIntroModal.test.tsx  ProjectIntroTrigger.test.tsx  ResizableTableHeaderCell.test.tsx  SQLiteCreateTableModal.test.tsx  SQLiteTableStructure.test.tsx  SavedSqlDropdown.test.tsx  TableContentSwitchTable.test.tsx  TableDataSelection.test.tsx  TableDataSlotResizeTab.test.tsx  TableStructureMetadata.test.tsx  TableStructureReorderConfirm.test.tsx  TableTabsBarSingleTab.test.tsx  VirtualDataTable.test.tsx  WhereFilterBuilder.test.tsx  antTableLayout.test.ts  columnAutoFitWidth.test.ts  columnTypeUtils.test.ts  columnVisibility.test.ts  connectionErrors.test.ts  connectionGroups.test.ts  connectionStore.test.ts  (+58 more)
(+179 files in other folders)
