[package]
name = "db-connect"
version = "1.0.1"
description = "A cross-platform database desktop client"
authors = ["you"]
edition = "2021"

[lib]
name = "db_connect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql_async = { version = "0.37", default-features = false, features = ["minimal-rust", "native-tls-tls"] }
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7.18"
postgres-native-tls = "0.5.3"
native-tls = "0.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.21"
keyring = "4.1"
rand_core = { version = "0.6", features = ["getrandom"] }
pbkdf2 = "0.12"
sha2 = "0.10"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
russh = { version = "0.60.3", default-features = false, features = ["flate2", "ring"] }
