[package]
name = "db-connect"
version = "1.0.11"
description = "A cross-platform database desktop client"
authors = ["you"]
edition = "2021"

[lib]
name = "db_connect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql_async = { version = "0.37", default-features = false, features = ["minimal-rust", "native-tls-tls"] }
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7.18"
postgres-native-tls = "0.5.3"
deadpool-sqlite = { version = "0.13", features = ["rt_tokio_1"] }
rusqlite = { version = "0.38", features = ["bundled"] }
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "native-tls"] }
bb8 = "0.9"
bb8-tiberius = { version = "0.16.0", default-features = false, features = ["with-tokio", "tds73"] }
clickhouse_rs = { package = "clickhouse", version = "0.15", default-features = false, features = ["rustls-tls", "lz4"] }
native-tls = "0.2"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.21"
keyring = "4.1"
rand_core = { version = "0.6", features = ["getrandom"] }
pbkdf2 = "0.12"
sha2 = "0.10"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
russh = { version = "0.60.3", default-features = false, features = ["flate2", "ring"] }
